# dabbling

./: .gitignore  .gitlab-ci.yml  pyproject.toml
dabbling/: __init__.py  console.py  dragon_curve.py  hilbert_curve.py
html/: annoying-sawtooth-alarm.html  index.html  kakalog.js  sokoban.css  sokoban.html  sokoban.js
html/quadratic-bezier-curves/: main.js
html/shades-of-grey/: main.js
html/sokoban/: kakalog-state.js  sokoban-web.js  sokoban.html  sokoban_tests.js
html/spinning-shapes/: index.html  main.js
html/tau/: 2020-darts.html  2020.html
html/tau-mandala/: index.css  index.html
html/the-dancing-polygon-screensaver/: index.html  main.js  style.css
html/wtc_plaza_2001-09-11/: index.html  wtc_plaza_2001-09-11.js
public/: index.html
public/tau/: 2020-darts.html
src/dabbling/: WTC_plaza_2001-09-11.py  dragon_curve.py
src/dabbling/hilbert_curve/: hilbert_curve.py
tests/: test_dabbling.py
