[tool.poetry]
name = "dabbling"
version = "0.1.0"
description = ""
authors = ["Yuval Langer"]
license = "agpl-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
beautifulsoup4 = ">=4,<5"
jupyter = ">=1,<2"
matplotlib = ">=3.2,<4"
#manimlib = ">=0.1,<0.2"
requests = ">=2,<3"
pandas = ">=1,<2"
click = "^7.1"

[tool.poetry.dev-dependencies]
pytest = "^"
mypy = "^0.780"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
black = "^19.10b0"

[tool.poetry.scripts]
dragon-curve = "src.dabbling.console:main_dragon"
hilbert-curve = "src.dabbling.console:main_hilbert"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

